<?xml version="1.0"?>
<package format="3">
  <name>heart_robot_control</name>
  <version>0.0.0</version>
  <description>Heart robot control package</description>

  <maintainer email="user@todo.todo">user</maintainer>
  <license>Apache License 2.0</license>

  <!-- build type -->
  <buildtool_depend>ament_python</buildtool_depend>

  <!-- 실행에 필요한 패키지 -->
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <!-- 테스트 (선택) -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>